tests/common/snapshots/e2e_tests__common__visual_testing__LSP Diagnostics__code_without_diagnostics.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 [No Name]*                                                                     
    1 │ fn main() {                                                            █
    2 │     let x = 5;                                                         █
    3 │     let y = 10;                                                        █
    4 │     println!("Hello");                                                 █
    5 │ }                                                                      █
    6 │                                                                        █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
[No Name] [+] | Ln 5, Col 0
